style(theme-default): オフキャンバスナビゲーションのスタイルを更新 feat(test): オフキャンバスナビゲーションの新しいスタイルを追加

--- a/src/scss/_theme-default.scss
+++ b/src/scss/_theme-default.scss
@@ -1,6 +1,6 @@
-$hc-offcanvas-nav-background-color:   #39697f !default;
+$hc-offcanvas-nav-background-color:   #363f5a !default;
 $hc-offcanvas-nav-text-color:         #fff !default;
-$hc-offcanvas-nav-text-size:          18px !default;
+$hc-offcanvas-nav-text-size:          24px !default;
 
 .hc-offcanvas-nav {
   font-family: sans-serif;
